--- a/app/views/public_relations/edit.html.erb
+++ b/app/views/public_relations/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Editing Public Relation</h1>
+<div class="admin-controls">
+  <h1>Editing Public Relations</h1>
 
-<%= render 'form' %>
+  <%= render 'form' %>
 
-<%= link_to 'Show', @public_relation %> |
-<%= link_to 'Back', public_relations_path %>
+  <%= link_to 'Show', @public_relation, :class => 'button-input' %>
+  <%= link_to 'Back', public_relations_path, :class => 'button-input' %>
+</div>
