--- a/app/views/public_relations/new.html.erb
+++ b/app/views/public_relations/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Public Relation</h1>
+<div class="admin-controls">
+  <h1>New Public Relation</h1>
 
-<%= render 'form' %>
+  <%= render 'form' %>
 
-<%= link_to 'Back', public_relations_path %>
+  <%= link_to 'Back', public_relations_path, :class => 'button-input' %>
+</div>
