--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -84,8 +84,8 @@ body.wts-dash {
   color: black;
   font-size: 2.5rem;
   line-height: 3.3rem;
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0 0 50px 0;
 }
 
 
@@ -150,6 +150,7 @@ a, a:visited {
 a:hover {
   background: #000;
   color: #FFF;
+  text-decoration: none;
 }
 
 
@@ -157,10 +158,17 @@ select,
 input {
   background-color: #ffffff;
   border: 1px solid #ebebeb;
-  color: #333;
+  color: #000;
   font-size: 2rem;
   height: 40px;
   padding: 0 20px;
+}
+
+label {
+  display: inline-block;
+  font-weight: bold;
+  margin-top: 20px;
+  margin-bottom: 5px;
 }
 
 input[type="submit"] {
@@ -172,6 +180,24 @@ input[type="submit"]:hover {
   background: #000;
   color: #FFF;
 }
+
+textarea {
+  resize: vertical;
+  width: 100%;
+}
+
+.button-input {
+  background: #FFF;
+  border: 1px solid #ebebeb;
+  cursor: pointer;
+  display: inline-block;
+  font-style: italic;
+  font-size: 2rem;
+  height: 40px;
+  line-height: 3.8rem;
+  padding: 0 20px;
+}
+
 
 
 .btn {
@@ -208,4 +234,25 @@ input[type="submit"]:hover {
 .glyphicon-stop:before  { content: "\e074"; }
 
 
+
+
+
+table {
+  width: 100%;
+
+  thead td {
+    font-weight: bold;
+  }
+
+  td {
+    font-size: 1.6rem;
+    line-height: 2.4rem;
+    padding-bottom: 5px;
+    vertical-align: middle;
+
+    label {
+      margin: 0;
+    }
+  }
+}
 
