--- a/app/views/layouts/_public_relations_listing.html.erb
+++ b/app/views/layouts/_public_relations_listing.html.erb
@@ -1,34 +1,31 @@
-<div class="panel panel-default" style="margin: 10px">
-  <div class="panel-heading">
-    <h2 class="panel-title">Total PR Changes</h2>
-  </div>
-  <div class="panel-body">
-<table class="table table-striped">
-  <thead>
-    <tr>
-      <th >Round</th>
-      <th >Details</th>
-      <th >Edit</th>
-      <th >Destroy</th>
-      <th >Country</th>
-      <th >Source</th>
-      <th >Amount</th>
-      <th >Description</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @public_relations.each do |public_relation| %>
+<h3>Total PR Changes</h3>
+<section>
+  <table class="unpr">
+    <thead>
       <tr>
-        <td><%= public_relation.round %></td>
-        <td><%= link_to 'Details', public_relation %></td>
-        <td><%= link_to 'Edit', edit_public_relation_path(public_relation) %></td>
-        <td><%= link_to 'Destroy', public_relation, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        <td><%= public_relation.country%></td>
-        <td><%= public_relation.source %></td>
-        <td><%= public_relation.pr_amount %></td>
-        <td><%= public_relation.description %></td>
+        <th >Round</th>
+        <th >Details</th>
+        <th >Edit</th>
+        <th >Destroy</th>
+        <th >Country</th>
+        <th >Source</th>
+        <th >Amount</th>
+        <th >Description</th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
-</div>
+    </thead>
+    <tbody>
+      <% @public_relations.each do |public_relation| %>
+        <tr>
+          <td><%= public_relation.round %></td>
+          <td><%= link_to 'Details', public_relation %></td>
+          <td><%= link_to 'Edit', edit_public_relation_path(public_relation) %></td>
+          <td><%= link_to 'Destroy', public_relation, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <td><%= public_relation.country%></td>
+          <td><%= public_relation.source %></td>
+          <td><%= public_relation.pr_amount %></td>
+          <td><%= public_relation.description %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</section>
